<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nextWAVE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- MicrowaveClient -->
    <string name="button_scan">Scan Barcode</string>
    <string name="button_no_barcode">No Barcode?</string>
    <string name="button_custom_time">Custom Cooking Time</string>
    
    <!-- StartFromDb -->
    <string name="startCookingButton">Start Cooking!</string>
    
    <!-- SearchDb -->
    <string name="searchdb_searchprompt">Search Term : </string>
    <string name="searchdb_search">Search</string>
    
    <!-- InputToDb -->
    <string name="inputdb_foodname">Food Name : </string>
    <string name="inputdb_cooktime">Cook Time</string>
    <string name="inputdb_foodprompt">e.g. Leftover Pizza</string>
    
    <!-- FoodDone -->
    <string name="done_adjusttime">You\'re done! Adjust the cook time for the future?</string>
    <string name="done_subtracttime">Subtract Time -</string>
    <string name="done_addtime">Add Time +"</string>
    <string name="done_done">Done</string>
    
    <!-- Countdown -->
    <string name="countdown_default">00:00</string>
    <string name="countdown_stopbutton">Stop Early</string>
    
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_start_from_db">StartFromDbActivity</string>
    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="title_activity_food_done">FoodDoneActivity</string>
    <string name="title_activity_search_db">SearchDbActivity</string>
    <string name="title_activity_input_to_db">InputToDbActivity</string>

</resources>
