<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nextwave.InputToDbActivity$PlaceholderFragment" >
    
    <EditText
        android:id="@+id/foodInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:hint="@string/inputdb_foodprompt">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/cookTimeLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputdb_cooktime"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/foodInput"
        android:gravity="center"
        android:paddingTop="16dp"
        />

    <TextView
        android:id="@+id/foodInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/foodInput"
        android:layout_alignLeft="@+id/cookTimeLabel"
        android:text="@string/inputdb_foodname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
